# CRPLib

./: .gitignore  CMakeLists.txt  CRPFormat.md  README.md
Include/CRPLib/: BPlanes.h  Base.h  Common.h  CrpFile.h  Effect.h  Entry.h  Interfaces.h  Lib.h  Material.h  Matrix.h  Part.h  RawData.h  Vector2.h  Vector4.h
Sources/: BPlanes.cpp  Base.cpp  CrpFile.cpp  DataAllocator.cpp  Effect.cpp  Entry.cpp  Material.cpp  Matrix.cpp  Part.cpp  RawData.cpp  Vector2.cpp  Vector4.cpp
